# cooling-watchdog

./: .gitignore  README copy.md  README.md  Sites.json  check_db.py  cooling_watchdog.py  main.py  pyproject.toml  requirements.txt  run_analysis.py  run_permissions.py  setup.py  setup_db_permissions.sql
cooling_watchdog/: Helpers.py  __init__.py  config.py  payload.py  risk_analysis._3.py  risk_analysis.py  risk_analysis_1.py  risk_analysis_2.py  sql_io.py  url_builder.py  weather.py
reports/: Cooling_Watchdog_Risk_Report_20250908_1652.xlsx  Cooling_Watchdog_Risk_Report_20250908_1719.xlsx  Cooling_Watchdog_Risk_Report_20250909_1119.xlsx  Cooling_Watchdog_Risk_Report_20250909_2153.xlsx  Cooling_Watchdog_Risk_Report_20250920_1406.xlsx  Cooling_Watchdog_Risk_Report_20250920_1419.xlsx  Cooling_Watchdog_Risk_Report_20250920_1430.xlsx  Cooling_Watchdog_Risk_Report_20250920_1438.xlsx  Cooling_Watchdog_Risk_Report_20250920_2150.xlsx  Cooling_Watchdog_Risk_Report_20250921_1559.xlsx  Cooling_Watchdog_Risk_Report_20250921_1621.xlsx  Cooling_Watchdog_Risk_Report_20250921_1622.xlsx  Cooling_Watchdog_Risk_Report_20250921_1632.xlsx  Cooling_Watchdog_Risk_Report_20250921_1637.xlsx  Cooling_Watchdog_Risk_Report_20250921_2106.xlsx  Cooling_Watchdog_Risk_Report_20250922_1324.xlsx
